--- a/templates/area_coordinacion/show.html.twig
+++ b/templates/area_coordinacion/show.html.twig
@@ -18,9 +18,9 @@
             <tr>
                 <th>Coordinador</th>
                 <td>
-                    {{ solicitud_servicio.autor.username }} 
-                    -- {{ solicitud_servicio.autor.nombres | default("")}}
-                    {{ solicitud_servicio.autor.apellidos | default("")}} --</td>
+                    {{ area_coordinacion.coordinador.username }} 
+                    -- {{ area_coordinacion.coordinador.nombres | default("")}}
+                    {{ area_coordinacion.coordinador.apellidos | default("")}} --</td>
             </tr>
         </tbody>
     </table>
