--- a/templates/gestor_usuario/edit.html.twig
+++ b/templates/gestor_usuario/edit.html.twig
@@ -4,10 +4,9 @@
 
 {% block container %}
     <h1>Editar Usuario</h1>
-
+        
     {{ include('gestor_usuario/_form.html.twig', {'button_label': 'Editar'}) }}
-
-    <a href="{{ path('gestor_usuario_index') }}">back to list</a>
-
     {# {{ include('gestor_usuario/_delete_form.html.twig') }} #}
+    <a href="{{ path('gestor_usuario_index') }}" class="btn btn-warning">Back</a>
+    
 {% endblock %}
