--- a/templates/solicitud_servicio/index.html.twig
+++ b/templates/solicitud_servicio/index.html.twig
@@ -26,7 +26,7 @@
                 <td>{{ solicitud_servicio.asunto }}</td>
                 <td>{{ solicitud_servicio.descripcion }}</td>
                 <td>{{ solicitud_servicio.estado }}</td>
-                <td>{# {{ solicitud_servicio.creado }} #}</td>
+                <td>{{ solicitud_servicio.creado|localizeddate('medium', 'short', 'es_VE', null) }}</td>
                 <td>
                     <a href="{{ path('solicitud_servicio_show', {'id': solicitud_servicio.id}) }}">show</a>
                     <a href="{{ path('solicitud_servicio_edit', {'id': solicitud_servicio.id}) }}">edit</a>
