--- a/templates/solicitud_requerimientos/new.html.twig
+++ b/templates/solicitud_requerimientos/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'gestorbase.html.twig' %}
 
-{% block title %}New Solicitud de Requerimientos{% endblock %}
+{% block title %}Nueva Solicitud de Requerimientos{% endblock %}
 
 {% block container %}
     <h1>Create Nueva Solicitud de Requerimientos</h1>
