--- a/templates/solicitud_servicio/index.html.twig
+++ b/templates/solicitud_servicio/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'gestorbase.html.twig' %}
 
+{% set servstatus = ['Creado','Aceptado','Cancelado','En Progreso','Invalido4','Por Revisar','Invalido6','Completado'] %}
+
 {% block title %}Indice de Solicitudes de Servicio.{% endblock %}
 
 {% block container %}
@@ -13,6 +15,7 @@
             <tr>
                 <th>Id</th>
                 <th>Asunto</th>
+                <th>Oficio</th>
                 <th>Descripcion</th>
                 <th>Estado</th>
                 <th>Creado</th>
@@ -24,17 +27,18 @@
             <tr>
                 <td>{{ solicitud_servicio.id }}</td>
                 <td>{{ solicitud_servicio.asunto }}</td>
+                <td>{{ solicitud_servicio.codigoDocumento | default("Sin Documento")}}</td>
                 <td>{{ solicitud_servicio.descripcion }}</td>
-                <td>{{ solicitud_servicio.estado }}</td>
+                <td>{{ servstatus[solicitud_servicio.estado] }}</td>
                 <td>{{ solicitud_servicio.creado|localizeddate('medium', 'short', 'es_VE', null) }}</td>
                 <td>
-                    <a href="{{ path('solicitud_servicio_show', {'id': solicitud_servicio.id}) }}">show</a>
-                    <a href="{{ path('solicitud_servicio_edit', {'id': solicitud_servicio.id}) }}">edit</a>
+                    <a href="{{ path('solicitud_servicio_show', {'id': solicitud_servicio.id}) }}" class="btn btn-default">Mostrar</a>
+                    <a href="{{ path('solicitud_servicio_edit', {'id': solicitud_servicio.id}) }}" class="btn btn-success">Editar</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="7">no records found</td>
             </tr>
         {% endfor %}
         </tbody>
