--- a/templates/solicitud_servicio/show.html.twig
+++ b/templates/solicitud_servicio/show.html.twig
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <th>Descripcion</th>
-                <td>{{ solicitud_servicio.descripcion }}</td>
+                <td>{{ solicitud_servicio.descripcion | default("Sin Descripción") }}</td>
             </tr>
             <tr>
                 <th>Estado</th>
@@ -26,13 +26,49 @@
         </tbody>
     </table>
 
-    <a href="{{ path('solicitud_servicio_index') }}" class="btn btn-warning">Back</a>
+    <table class="table">
+        <thead>
+            <tr colspan="7">Solicitudes Creadas </tr>
+            <tr>
+                <th>Id</th>
+                <th>Area</th>
+                <th>Procedencia</th>
+                <th>Asunto</th>
+                <th>Estado</th>
+                <th>Creado</th>
+                <th>Modificado</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for solicitud_requerimiento in solicitud_servicio.requerimientos %}
+            <tr>
+                <td>{{ solicitud_requerimiento.id }}</td>
+                <td>{{ solicitud_requerimiento.area }}</td>
+                <td>{{ solicitud_requerimiento.procedenciaDepartamento }}</td>
+                <td>{{ solicitud_requerimiento.asunto }}</td>
+                <td>{{ solicitud_requerimiento.estado }}</td>
+                <td>{{ solicitud_requerimiento.creado|localizeddate('medium', 'short', 'es_VE', null) }}</td>
+                <td>{{ solicitud_requerimiento.modificado|localizeddate('medium', 'short', 'es_VE', null) }}</td>
+                <td>
+                    {% if is_granted('ROLE_CORDGN') %}
+                        <a href="{{ path('solicitud_requerimientos_edit', {'id': solicitud_requerimiento.id}) }}" class="btn btn-success">Editar</a>
+                    {% endif %}
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="7">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <a href="{{ app.request.headers.get('referer') }}" class="btn btn-warning">Back</a>
 
     <a href="{{ path('solicitud_servicio_edit', {'id': solicitud_servicio.id}) }}" class="btn btn-success">Edit</a>
 
     <a href="{{ path('solicitud_requerimientos_new', {'s_id': solicitud_servicio.id}) }}" class="btn btn-success">Crear Requerimientos</a>
-
-
 
     {# {{ include('solicitud_servicio/_delete_form.html.twig') }} #}
 {% endblock %}
